--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.9.0"
   }
 }
