--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-messages": "^1.0.1",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
