--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "path": "^0.12.7",
-    "pg": "^8.9.0"
+    "pg": "^8.9.0",
+    "pg-promise": "^11.5.4"
   }
 }
