--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.7",
     "path": "^0.12.7",
     "pg": "^8.9.0",
     "pg-promise": "^11.5.4"
