--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-messages": "^1.0.1",
     "express-session": "^1.17.2",
+    "https": "^1.0.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.7",
     "path": "^0.12.7",
-    "pg": "^8.9.0",
-    "pg-promise": "^11.5.4"
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "pg-promise": "^11.5.4",
+    "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
