--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": "^4.17.3",
     "express-messages": "^1.0.1",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
+    "helmet": "^8.0.0",
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.7",
