--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "https": "^1.0.0",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.7",
+    "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
